# BmpToYUV

./: BMPFileReader.cpp  BMPFileReader.h  BMPImage.cpp  BMPImage.h  BMPToYUVConverter.cpp  BMPToYUVConverter.h  CMakeLists.txt  RGBFrame.cpp  RGBFrame.h  Structures.h  TestTaskElecard.cpp  YUVVideo.cpp  YUVVideo.h  main.cpp
